# llmux

./: .env.common.example  .gitignore  Dockerfile.qwen-asr  HANDOFF.md  LICENSE  README.md  README_EN.md  README_KO.md  docker-compose.dev.yaml  docker-compose.extra-packages.yaml  docker-compose.lora.yaml  docker-compose.overrides.yaml  docker-compose.qwen-asr.yaml  docker-compose.yaml  profiles.example.yaml  pyproject.toml  run.sh
.github/workflows/: release-assets.yml
compose/llamacpp/: docker-compose.override.yaml  docker-compose.yaml
compose/vllm/: docker-compose.dev.yaml  docker-compose.overrides.yaml  docker-compose.yaml
config/: deepseek.yaml  gpt-oss-120b.yaml  hyperclova-seed-think-32b.yaml  qwen3-vl-30b-a3b-fp8.yaml
config/llamacpp/: deepseek-r1-distill-llama-8b-q4.yaml  example.yaml  llama3.1-8b-q8.yaml  qwen3-30b-a3b-q4.yaml  qwen3.6-35b-a3b.yaml
config/vllm/: chandra-ocr-2.yaml  deepseek-ocr-2.yaml  dots-ocr.yaml  example.yaml  glm-ocr.yaml  nanonets-ocr-s.yaml  paddleocr-vl-1-5.yaml  qianfan-ocr.yaml  qwen3-5-0-8b.yaml  qwen3-5-2b.yaml  qwen3-5-35b-a3b.yaml  qwen3-5-9b-gguf-q8-0.yaml  qwen3-asr-1-7b.yaml  voxtral-mini-4b-realtime-2602.yaml
demo/: gpu.tape  llamacpp.tape  vllm.tape
docs/: index.html
lib/: build.sh  colors.sh  container.sh  menus.sh  tui.sh  validation.sh  version.sh
packaging/: build-release-assets.sh
profiles/: clova.env  deepseek.env  example.env  llm.env
profiles/llamacpp/: deepseek-r1-distill-llama-8b-q4.env  example.env  llama3.1-8b-q8.env  qwen3-30b-a3b-q4.env  qwen3.6-35b-a3b.env
profiles/vllm/: chandra-ocr-2.env  deepseek-ocr-2.env  deepseek.env  dots-ocr.env  example.env  glm-ocr.env  nanonets-ocr-s.env  paddleocr-vl-1-5.env  qianfan-ocr.env  qwen.env  (+5 more)
scripts/: entrypoint-wrapper.sh
tests/: test_backend.py
tui/: __main__.py  app.py  app.tcss  backend.py  backend_common.py  backend_inspect.py  backend_process.py  backend_runtime.py  backend_storage.py
(+44 files in other folders)
