[project]
name = "llm-compose"
version = "0.1.0"
description = "Unified Textual TUI that launches and manages both vLLM and llama.cpp model servers as Docker Compose profiles from a single dashboard."
requires-python = ">=3.10"
authors = [{ name = "chbae", email = "chbae624@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "textual>=8.2.0",
    "pyyaml>=6.0",
    "hf-mem>=0.5.0",
]

[project.scripts]
llm-compose = "tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tui"]
