[project]
name = "llmux"
version = "2.0.2"
description = "A terminal multiplexer for LLM servers — one TUI to orchestrate vLLM and llama.cpp Docker profiles side by side."
requires-python = ">=3.10"
authors = [{ name = "chbae", email = "chbae624@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "textual>=8.2.0",
    "pyyaml>=6.0",
    "hf-mem>=0.5.0",
]

[project.scripts]
llmux = "tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tui"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
